longhorn/frontend-ingress.yml
apiVersion: "networking.k8s.io/v1"
kind: "Ingress"
metadata:
  name: "longhorn-frontend"
  namespace: "longhorn-system"
  annotations:
    cert-manager.io/cluster-issuer: "k8s-cluster-issuer"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: "nginx"
  tls:
    - secretName: "longhorn-frontend-cert"
      hosts: ["longhorn.k3s"]
  rules:
    - host: "longhorn.k3s"
      http:
        paths:
          - pathType: "Prefix"
            path: "/"
            backend:
              service:
                name: "longhorn-frontend"
                port:
                  number: 80
